# ChangeLog for x11-apps/intel-gpu-tools
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-apps/intel-gpu-tools/ChangeLog,v 1.17 2014/07/30 20:44:47 remi Exp $

  30 Jul 2014; Rémi Cardona <remi@gentoo.org> intel-gpu-tools-1.7.ebuild:
  Add missing REQUIRED_USE for proper python-single-r1 use. See bug #518538.

*intel-gpu-tools-1.7 (28 Jul 2014)

  28 Jul 2014; Mike Frysinger <vapier@gentoo.org> +intel-gpu-tools-1.7.ebuild,
  metadata.xml:
  Version bump #502034 by James Ausmus.

  18 Nov 2012; Agostino Sarubbo <ago@gentoo.org> intel-gpu-tools-1.3.ebuild:
  Stable for x86, wrt bug #440872

  16 Nov 2012; Agostino Sarubbo <ago@gentoo.org> intel-gpu-tools-1.3.ebuild:
  Stable for amd64, wrt bug #440872

  23 Sep 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  -intel-gpu-tools-1.0.2.ebuild, -intel-gpu-tools-1.1.ebuild,
  intel-gpu-tools-1.3.ebuild:
  Add dependency on glib, bug #435984.

  02 Sep 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  intel-gpu-tools-1.3.ebuild:
  Make nouveau support optional, bug #433683.

*intel-gpu-tools-1.3 (01 Sep 2012)

  01 Sep 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +intel-gpu-tools-1.3.ebuild:
  Version bump.

  24 Jun 2012; Agostino Sarubbo <ago@gentoo.org> intel-gpu-tools-1.2.ebuild:
  Stable for x86, wrt bug #419473

  23 Jun 2012; Sven Wegener <swegener@gentoo.org> intel-gpu-tools-1.1.ebuild,
  intel-gpu-tools-1.2.ebuild:
  Add version number to libdrm dependency.

  22 Jun 2012; Agostino Sarubbo <ago@gentoo.org> intel-gpu-tools-1.2.ebuild:
  Stable for amd64, wrt bug #419473

  18 Mar 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  intel-gpu-tools-1.2.ebuild:
  Fix dependencies, bug #408631.

*intel-gpu-tools-1.2 (24 Feb 2012)

  24 Feb 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +intel-gpu-tools-1.2.ebuild:
  Version bump.

*intel-gpu-tools-1.1 (01 Jan 2012)
