@@ -12,4 +12,4 @@ RESTRICT=test
 SLOT=0
 SRC_URI=http://xorg.freedesktop.org/releases/individual/app/intel-gpu-tools-1.7.tar.bz2
 _eclasses_=autotools	82621aada74cb2a492bd8e73d49e9f54	autotools-utils	3727db64c7b960903d5033280f108080	eutils	06133990e861be0fe60c2b428fd025d9	flag-o-matic	9836bc51856bcaffac53c9cd4b59a8be	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	python-single-r1	a71a169a881e0a11d04a7fe12dc39f6e	python-utils-r1	8c66c6dabd0295878b68b40dbd0b087b	toolchain-funcs	0f1760274637a138b99bb649202ea402	xorg-2	69479ff7a35a30e863a475568d29b9be
-_md5_=c26808d1bf71185075de61536efb095d
+_md5_=d11265a854be7b4a5bc175b8ed185037
