@@ -3,6 +3,6 @@ DIST intel-gpu-tools-1.3.tar.bz2 589027 SHA256 51d22fdb3d415a1b3b7d0a172c1bb24de
 DIST intel-gpu-tools-1.7.tar.bz2 11780573 SHA256 22612343bbd9b518b9f92a983555dbbcae8040ee577a38277dbf873c8900207a SHA512 13181db6d2424fa27c97c30ecb83b8554fc2e9ce98bec7b7735f919aa9d7e2563c3e1860dc6e5aedf3918c029acb205b8fcf6a32de1567f557f8cd98c09a5d98 WHIRLPOOL f66e0710377aa4f46067840efd1cf70814e10cd81ff24ebb5db21b901787846f63b1461502ec01ba7383ead76e985c25860801355a9582d5509a861fa70aacb0
 EBUILD intel-gpu-tools-1.2.ebuild 458 SHA256 fdad3dbf94c6b85fa6731441358ddebf3592c3f958a17ba80be5a608b2f9a6d9 SHA512 89f084c31683674e22a18175d0ea40eb5ef64d7753d5fb9f79548fa28aa6ed26e4b00ab988a92a0ac222251020be0ccd5501e257c685b2d3b73a71a1a558bd9c WHIRLPOOL a086480bf28b211867405023d163d7b5382ea553fbccd3fdb8848415f56b149cffed88f944bbcbce46b2d2643869f421981f8c62fd87e208479291f64528b308
 EBUILD intel-gpu-tools-1.3.ebuild 631 SHA256 8b2d645170e4ab0ed6fd90a7305dd66cc0213987f1cf93dfd11a988562e70f7e SHA512 538ab6e5c42e91365876a83c2db8e7f73a2ab9844d0e909aeb32c45b9d815e54a8f60682bf534e0feba0e82f50d80f437fc5b5b6eadc831bf8a7663ff00fe212 WHIRLPOOL d232fb9bf0a32c9c1ea96adb204ce9ad640f2015ede74f3839acf125036d622b6f58669168b4bc7a33ed6af7cddddee9e06ef01abc9b04384aa2e202e2d50205
-EBUILD intel-gpu-tools-1.7.ebuild 837 SHA256 b1e1ccb0079ace8ebf397a41f1e1a15e0e3d95c0aeaa8a6dca1b4beae8fb149f SHA512 156a7651ca5e48b92e1fb5bbb7e1920225c00fd7c7e8af803e620540adc645b76f1857412e669a6ccbd765da652be5c5d775505e9bbb571351d67b2a8a302dab WHIRLPOOL 8a01255de456569f3eb45640831af6575e91f4fcd0d9d133bf2e15f7d5c7321fc64397a2411118fc02a9aaabe6d7a54881711887ce8272ff1c761e35ec739e92
-MISC ChangeLog 2724 SHA256 db74291ba1888c13b9c5ca587f4560d3a90df6ca4d2770442dcd2d0692cb8fe6 SHA512 59fce8d7bb0f148d694dc37287b43c3ff8f84baefc1f9819c3307e11015deb7dcc099e6b5c4a238b0c8849696a74bc1fe1fc870de5198f3dea952443faf55ffc WHIRLPOOL 46f2e5891eb79fdf62a9693d65433ed3bf039d399405f0b617748597f7851353c62b3deb43cab2c334c8e281af6757f572548dfe0a41aa369a7fa06dd3ded00e
+EBUILD intel-gpu-tools-1.7.ebuild 896 SHA256 d49c0319a167fb5391b0fdc8a3be4e481bf7a1065c312aa1a0185faef720898a SHA512 725c1fc4503f029267a1ac090a65b28249d4b3d4dfd06c1b0d24fa4724e8f1bd86558509484b3cefcaf1701307e6cd12969731b0d9c24c0189a35f9e94e03088 WHIRLPOOL 32df440466757fa7c6787c79aa8226a8b7cbae6f08ed3a191893f125b0d5a4d5e5aad597152af237845fbef42ea3f3788c7721f2d1977a34fcbc32f556648b2f
+MISC ChangeLog 2874 SHA256 e10dd0dd84ec759843aa2829e9f96ca15a925813d70346666acf67e97e34ee35 SHA512 25266f8596b4fd81b2520c465e23d59f55b6d906411d76cfeeaffbcd849d3931c3156d6954971257bcc065234baa8ecc0c163a5fd34a396866ad886791e7623e WHIRLPOOL 256ba352dda8514c4aaae6d150da7df39d8b3d6a491db33225d6eca396c84781cddd42b640897ea1459d97c21e572e9448f6c34d4a5325eb7d43611c3151b783
 MISC metadata.xml 244 SHA256 547b97ccf3e24541c0b9a797343afe3c0fcfc3889efe8b2587c3f9afeb26372f SHA512 3baef52bdbf05bdbe102a310aa00f92a29f0db7aa29ff365f189e1e5945c6909e391874460844d262e43c49f9fbf38371399b25153e23af4910323cc042845bb WHIRLPOOL 63fd6766f029d37c0a46734974328905066e381c8167ba1ebac0a133565fc82d4c1bcf7516ba0deb98eab4c28c6a70edf60ebd2b53c74b1185cadf675e5a06a5
