@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/intel-gpu-tools
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/intel-gpu-tools/ChangeLog,v 1.17 2014/07/30 20:44:47 remi Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/intel-gpu-tools/ChangeLog,v 1.18 2014/08/01 22:00:34 remi Exp $
+
+  01 Aug 2014; Rémi Cardona <remi@gentoo.org> intel-gpu-tools-1.7.ebuild:
+  Add missing pkg_setup for proper python-single-r1 use. See bug #518538.
 
   30 Jul 2014; Rémi Cardona <remi@gentoo.org> intel-gpu-tools-1.7.ebuild:
   Add missing REQUIRED_USE for proper python-single-r1 use. See bug #518538.
